--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -62,9 +62,7 @@
               <%= locals.user.username %>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="/logout">Sair</a>
             </div>
           </li>
           <% } else { %>
