--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -44,12 +44,19 @@
           <li class="nav-item">
             <a class="nav-link" href="/noticias"> Noticias </a>
           </li>
+          <% if('user' in locals) { %> <% if(locals.role === 'restrito') { %>
           <li class="nav-item">
             <a class="nav-link" href="/restrito/noticias">
               Noticias restritas
             </a>
           </li>
-          <% if('user' in locals) { %>
+          <% } %> <% if(locals.role === 'admin') { %>
+          <li class="nav-item">
+            <a class="nav-link" href="/admin/noticias">
+              Noticias Admin
+            </a>
+          </li>
+          <% } %>
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -62,6 +69,12 @@
               <%= locals.user.username %>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <% if(locals.user.roles.length>1) { %> <%
+              locals.user.roles.forEach( role => { %>
+              <a class="dropdown-item" href="/change-role/<%= role %>">
+                <%= role %>
+              </a>
+              <% }) %> <% } %>
               <a class="dropdown-item" href="/logout">Sair</a>
             </div>
           </li>
