corrigido as pages

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,6 +27,9 @@
     <button class="btn btn-lg btn-primary btn-block" type="submit">
       Entrar
     </button>
+    <a class="btn btn-lg btn-primary btn-block" href="/facebook">
+      Entrar com Facebook
+    </a>
   </form>
 </div>
 
