--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -66,7 +66,7 @@
               aria-haspopup="true"
               aria-expanded="false"
             >
-              <%= locals.user.username %>
+              <%= locals.user.username || locals.user.name %>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
               <% if(locals.user.roles.length>1) { %> <%
