--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,6 +30,9 @@
     <a class="btn btn-lg btn-primary btn-block" href="/facebook">
       Entrar com Facebook
     </a>
+    <a class="btn btn-lg btn-danger btn-block" href="/google">
+      Entrar com Google
+    </a>
   </form>
 </div>
 
